<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/registrationLabel"
            style="@style/App.Main.Label.Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_activity_main_activity_sing_up_label"
            android:textColor="@color/red"
            app:layout_constraintBottom_toTopOf="@id/registrationLoginInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationLoginInputLayout"
            style="@style/App.InputLayout.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_activity_login_label"
            app:layout_constraintBottom_toTopOf="@id/registrationPasswordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registrationLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationPasswordInputLayout"
            style="@style/App.InputLayout.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sing_in_activity_password_label"
            app:layout_constraintBottom_toTopOf="@id/registrationPasswordAgainInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registrationLoginInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registrationPasswordAgainInputLayout"
            style="@style/App.InputLayout.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_activity_password_again_label"
            app:layout_constraintBottom_toTopOf="@id/nameInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registrationPasswordInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordAgainEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            style="@style/App.InputLayout.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_activity_name_label"
            app:layout_constraintBottom_toTopOf="@id/secondNameInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registrationPasswordAgainInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/secondNameInputLayout"
            style="@style/App.InputLayout.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sign_up_activity_second_name_label"
            app:layout_constraintBottom_toTopOf="@id/sexRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/sexRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            app:layout_constraintBottom_toTopOf="@id/additionalInformation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secondNameInputLayout">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_activity_man_label" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_activity_woman_label" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/alien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/sign_up_activity_something_new_label" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/additionalInformation"
            style="@style/App.InputLayout.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:hint="@string/sign_up_activity_additional_information_label"
            app:layout_constraintBottom_toTopOf="@id/iAgreeCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sexRadioGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/additionalInformationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:minLines="5" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/iAgreeCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/sign_up_activity_i_agree_label"
            app:layout_constraintBottom_toTopOf="@id/signUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/additionalInformation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            style="@style/App.Button.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_activity_sing_up_action_label"
            app:layout_constraintBottom_toTopOf="@id/backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iAgreeCheckBox" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButton"
            style="@style/App.Button.Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:text="@string/sign_up_activity_back_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>