<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/trainingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_training_label"
        android:textColor="@color/black"
        style="@style/App.Main.Label.Style"
        app:layout_constraintBottom_toTopOf="@id/singInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/singInButton"
        style="@style/App.Button.Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_sing_in_label"
        app:layout_constraintBottom_toTopOf="@id/registrationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trainingLabel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationButton"
        style="@style/App.Button.Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_sing_up_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/singInButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/aboutProgramLabel"
        style="@style/App.Button.Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:text="@string/main_activity_about_program_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>